Bug 307365 - Decoration broken in maximized state
Summary: Decoration broken in maximized state
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: aurorae (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 4.9.2
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/106...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-09-25 07:05 UTC by Victor Varvaryuk
Modified: 2012-10-11 15:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments
aurorae_chrome_dark_KDE_4.8.5 (2.64 KB, image/png)
2012-09-25 07:06 UTC, Victor Varvaryuk
Details
aurorae_chrome_dark_KDE_4.9.1 (3.53 KB, image/png)
2012-09-25 07:06 UTC, Victor Varvaryuk
Details
USU Aurorae theme - normal state (18.29 KB, image/jpeg)
2012-10-10 17:42 UTC, lokiisyourmaster
Details
USU Aurorae theme - maximized state (20.28 KB, image/jpeg)
2012-10-10 17:42 UTC, lokiisyourmaster
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Varvaryuk 2012-09-25 07:05:19 UTC
AFAIK in the newest KDE Aurorae engine was refactored, and the decoration is not rendered the same way as before.

Reproducible: Always

Steps to Reproduce:
1. Install Chrome Drak theme (for example) - https://github.com/warvariuc/chrome-dark
2. Apply in KDE 4.8.5 and in KDE 4.9.1
3. Maximize a window and see the difference
Actual Results:  
In KDE 4.8.5 in maximized state the window title bar doesn't have a top border.
In KDE 4.9.1 the title bar has a border which should be visible in a non-maximized state.

Expected Results:  
The decoration should be rendered exactly the same way - pixel perfect.
Comment 1 Victor Varvaryuk 2012-09-25 07:06:34 UTC
Created attachment 74154 [details]
aurorae_chrome_dark_KDE_4.8.5
Comment 2 Victor Varvaryuk 2012-09-25 07:06:52 UTC
Created attachment 74155 [details]
aurorae_chrome_dark_KDE_4.9.1
Comment 3 Thomas Lübking 2012-09-25 12:42:44 UTC
pot. related to bug #304822 and possibly bug #304791
Comment 4 Martin Flöser 2012-09-25 15:21:00 UTC
> pot. related to bug #304822 and possibly bug #304791
nope, I'm actually aware of that regression. It's already on my TODO stack for 
this week.
Comment 5 Martin Flöser 2012-09-25 20:08:20 UTC
for the record: I have a fix but it revealed more bugs, so I doubt I will feel satisfied for 4.9.2.
Comment 6 Martin Flöser 2012-09-27 13:35:00 UTC
Git commit fd1e76c03ea8701b6118016a3864b315bf09cbda by Martin Gräßlin.
Committed on 25/09/2012 at 22:26.
Pushed by graesslin into branch 'KDE/4.9'.

Fix enabled borders and padding for maximized Aurorae decos

In the maximized state the enabled borders were still enabled causing
the actual borders to be still shown. In addition the padding is not
adjusted to be 0. This is done in the C++ part is it does not make any
sense to have shadows being thrown to another screen for a maximized
window.

REVIEW: 106576
FIXED-IN: 4.9.2

M  +4    -0    kwin/clients/aurorae/src/aurorae.cpp
M  +1    -1    kwin/clients/aurorae/src/qml/AuroraeButtonGroup.qml
M  +7    -3    kwin/clients/aurorae/src/qml/aurorae.qml

http://commits.kde.org/kde-workspace/fd1e76c03ea8701b6118016a3864b315bf09cbda
Comment 7 lokiisyourmaster 2012-10-09 20:52:06 UTC
The bug does not seem to be fixed in 4.9.2. My distribution - USU (Kubuntu 12.04 based), with KDE installed from https://launchpad.net/~kubuntu-ppa/+archive/backports
Actually, all Aurorae-based themes I've tried since upgrading look broken.
Comment 8 Martin Flöser 2012-10-10 04:19:37 UTC
(In reply to comment #7)
> The bug does not seem to be fixed in 4.9.2. My distribution - USU (Kubuntu
> 12.04 based), with KDE installed from
> https://launchpad.net/~kubuntu-ppa/+archive/backports
> Actually, all Aurorae-based themes I've tried since upgrading look broken.
have you restarted since the update? Which themes are you using? Could you please provide a screenshot?
Comment 9 lokiisyourmaster 2012-10-10 17:42:31 UTC
Created attachment 74463 [details]
USU Aurorae theme - normal state
Comment 10 lokiisyourmaster 2012-10-10 17:42:52 UTC
Created attachment 74464 [details]
USU Aurorae theme - maximized state
Comment 11 lokiisyourmaster 2012-10-10 17:43:49 UTC
(In reply to comment #8)
> (In reply to comment #7)
> > The bug does not seem to be fixed in 4.9.2. My distribution - USU (Kubuntu
> > 12.04 based), with KDE installed from
> > https://launchpad.net/~kubuntu-ppa/+archive/backports
> > Actually, all Aurorae-based themes I've tried since upgrading look broken.
> have you restarted since the update? Which themes are you using? Could you
> please provide a screenshot?

Yes, there have been multiple restarts.
Here is the theme I've tested with: http://opendesktop.org/content/show.php/USU+8.1?content=154633 
The same happens with Air-oxygen and others.
Comment 12 lokiisyourmaster 2012-10-10 17:45:35 UTC
Sorry for the double post, but forgot to mention - the window titlebar should look exactly the same in both states. It looked OK before upgrading to 4.9.2
Comment 13 Martin Flöser 2012-10-11 05:57:30 UTC
(In reply to comment #12)
> Sorry for the double post, but forgot to mention - the window titlebar
> should look exactly the same in both states. It looked OK before upgrading
> to 4.9.2
I installed now the theme and will look into it, though it is possible that it is a theme bug, which was just hidden in old Aurorae
Comment 14 lokiisyourmaster 2012-10-11 10:25:59 UTC
(In reply to comment #13)
> (In reply to comment #12)
> > Sorry for the double post, but forgot to mention - the window titlebar
> > should look exactly the same in both states. It looked OK before upgrading
> > to 4.9.2
> I installed now the theme and will look into it, though it is possible that
> it is a theme bug, which was just hidden in old Aurorae

Thanks! Btw, this theme is created by me, and if it's a theme bug which was hidden before, I will fix it as soon as I find out what is causing it.
If it's a theme bug, it's shared among many themes (at least on my PC).
Btw, on some themes the bug is more noticeable when the desktop effects are enabled.
Comment 15 Martin Flöser 2012-10-11 15:32:14 UTC
(In reply to comment #14)
> If it's a theme bug, it's shared among many themes (at least on my PC).
It's not a theme bug, the theme is pretty good, it is more complete than most themes. For this particular issue I created now bug #308248. Please try the attached patch.