clients/aurorae/src/qml/aurorae.qml
@@ -47,6 +47,7 @@ Decoration {
         imagePath: backgroundSvg.imagePath
         prefix: "decoration"
         opacity: shown ? 1 : 0
+        enabledBorders: decoration.maximized ? PlasmaCore.FrameSvg.NoBorder : PlasmaCore.FrameSvg.TopBorder | PlasmaCore.FrameSvg.BottomBorder | PlasmaCore.FrameSvg.LeftBorder | PlasmaCore.FrameSvg.RightBorder
         Behavior on opacity {
             NumberAnimation {
                 duration: auroraeTheme.animationTime
@@ -59,6 +60,7 @@ Decoration {
         imagePath: backgroundSvg.imagePath
         prefix: "decoration-inactive"
         opacity: (!decoration.active && backgroundSvg.supportsInactive) ? 1 : 0
+        enabledBorders: decoration.maximized ? PlasmaCore.FrameSvg.NoBorder : PlasmaCore.FrameSvg.TopBorder | PlasmaCore.FrameSvg.BottomBorder | PlasmaCore.FrameSvg.LeftBorder | PlasmaCore.FrameSvg.RightBorder
         Behavior on opacity {
             NumberAnimation {
                 duration: auroraeTheme.animationTime
@@ -80,6 +82,7 @@ Decoration {
         prefix: "decoration-maximized"
         height: parent.borderTopMaximized
         opacity: shown ? 1 : 0
+        enabledBorders: PlasmaCore.FrameSvg.NoBorder
         Behavior on opacity {
             NumberAnimation {
                 duration: auroraeTheme.animationTime
@@ -100,6 +103,7 @@ Decoration {
         prefix: "decoration-maximized-inactive"
         height: parent.borderTopMaximized
         opacity: (!decoration.active && decoration.maximized && backgroundSvg.supportsMaximizedInactive) ? 1 : 0
+        enabledBorders: PlasmaCore.FrameSvg.NoBorder
         Behavior on opacity {
             NumberAnimation {
                 duration: auroraeTheme.animationTime
@@ -112,7 +116,7 @@ Decoration {
         width: childrenRect.width
         anchors {
             left: parent.left
-            leftMargin: (decoration.maximized ? auroraeTheme.titleEdgeLeftMaximized : auroraeTheme.titleEdgeLeft) + root.paddingLeft
+            leftMargin: decoration.maximized ? auroraeTheme.titleEdgeLeftMaximized : (auroraeTheme.titleEdgeLeft + root.paddingLeft)
         }
         Behavior on anchors.leftMargin {
             NumberAnimation {
@@ -126,7 +130,7 @@ Decoration {
         width: childrenRect.width
         anchors {
             right: parent.right
-            rightMargin: (decoration.maximized ? auroraeTheme.titleEdgeRightMaximized : auroraeTheme.titleEdgeRight) + root.paddingRight
+            rightMargin: decoration.maximized ? auroraeTheme.titleEdgeRightMaximized : (auroraeTheme.titleEdgeRight + root.paddingRight)
         }
         Behavior on anchors.rightMargin {
             NumberAnimation {
@@ -148,7 +152,7 @@ Decoration {
             left: leftButtonGroup.right
             right: rightButtonGroup.left
             top: root.top
-            topMargin: (decoration.maximized ? auroraeTheme.titleEdgeTopMaximized : auroraeTheme.titleEdgeTop) + root.paddingTop
+            topMargin: decoration.maximized ? auroraeTheme.titleEdgeTopMaximized : (auroraeTheme.titleEdgeTop + root.paddingTop)
             leftMargin: auroraeTheme.titleBorderLeft
             rightMargin: auroraeTheme.titleBorderRight
         }
